542-fault-injection/5421/istio-api/destination-rule-delay.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ratings-delay
spec:
  host: ratings
  subsets:
    - name: v1
      labels:
        version: v1
