542-fault-injection/5421/istio-api/level1-destination-rule-ratings.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: level1-ratings
spec:
  host: ratings
  subsets:
    - name: v1
      labels:
        version: v1
