542-fault-injection/5421/istio-api/level1-virtual-service-ratings-delay.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: level1-ratings-delay
spec:
  hosts:
    - ratings
  http:
    - fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 5s
      route:
        - destination:
            host: ratings
            subset: v1
    - route:
        - destination:
            host: ratings
            subset: v1
