542-fault-injection/5421/istio-api/level1-virtual-service-reviews.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: level1-reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 50
        - destination:
            host: reviews
            subset: v2
          weight: 50
